# grue-rs

./: CHANGES.md  Cargo.toml  README.md
data/: adventures.toml  generic_fantasy.toml  markov_chain.toml  military_unit.toml  mystic_order.toml  specific_fantasy.toml  tavern.toml  thieves_assassins.toml
examples/: adventure.rs  dialogue.rs  markov.rs  namegen.rs
src/: error.rs  lib.rs
src/dialogue/: mod.rs
src/generation/: adventure.rs  markov.rs  mod.rs
src/generation/names/: doughty.rs  draconic.rs  elegant_evil.rs  empyreal.rs  faery_kind.rs  fair_noble.rs  family_name.rs  generic_fantasy.rs  homely.rs  infernal.rs  malevolent.rs  military_unit.rs  mod.rs  mystic_order.rs  primitive.rs  specific_fantasy.rs  tavern.rs  thieves_assassins.rs  vile_crude.rs
src/inventory/: mod.rs
