[package]
name = "grue"
version = "0.1.0"
description = "Various tools and algorithms for building rpg and adventure games"
authors = ["Graham Wihlidal <graham@wihlidal.ca>"]
repository = "https://github.com/gwihlidal/grue-rs"
readme = "README.md"
edition = "2018"

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
rand = "0.6.5"
regex = "1.1.7"
toml = "0.5.1"
serde_derive = "1.0.92"
indextree = "3.2.0"
failure = "0.1.5"
serde = { version = "1.0.92", features = ["derive"] }
serde_yaml = "0.8"
uuid = { version = "0.7.4", features = ["serde", "v4"] }

[dev-dependencies]
heck = "0.3.1"