[package]
name = "grue"
version = "0.1.0"
description = "Various tools and algorithms for building role-playing and adventure games"
authors = ["Graham Wihlidal <graham@wihlidal.ca>"]
homepage = "https://github.com/gwihlidal/grue-rs"
repository = "https://github.com/gwihlidal/grue-rs"
documentation = "https://docs.rs/grue"
readme = "README.md"
edition = "2018"
keywords = ["markov", "procedural", "pattern", "name", "generate"]
categories = ["algorithms", "data-structures", "game-engines"]
license = "MIT/Apache-2.0"

[badges]
travis-ci = { repository = "gwihlidal/grue-rs" }
maintenance = { status = "actively-developed" }

[dependencies]
rand = "0.7.0"
regex = "1.1.9"
toml = "0.5.1"
serde_derive = "1.0.94"
indextree = "3.3.0"
failure = "0.1.5"
serde = { version = "1.0.94", features = ["derive"] }
serde_yaml = "0.8"
uuid = { version = "0.7.4", features = ["serde", "v4"] }
strsim = "0.9.2"

[dev-dependencies]
heck = "0.3.1"